--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,7 +4,9 @@
     padding: 0;
     font-family: 'Kanit', sans-serif;
     background-color: transparent;
+    scroll-behavior: smooth;
 }
+
 
 body{
     min-height: 100vh;
@@ -49,54 +51,98 @@ body{
     color: #f5f6fa;
     font-size: 20px;
 }
-.container-teclado-general{
-    background-color: #dcdde1;
-}
-
-.container-teclado{
-    background-color: #e84118;
-}
-
-.container-teclado img {
-    height: 20em;
-}
 
 footer{
     margin-top: auto;
 }
 
- .container-products-img{
-    height: 20rem;
-    width: 75%;
-    align-self: center;
-}
-
-.container-products{
-    width: 100%;
-    max-width: 1200px;
-    height: 430px;
+ .card-products{
     display: flex;
-    flex-wrap: wrap;
+ }
+
+.card-margin-products{
+    margin: 0 .5em;
+}
+
+.img-card img {
+    height: 15vw;
+    width: 20vw;
+}
+
+.img-card{
+    display: flex; 
+    align-items: center;
     justify-content: center;
-    margin: auto;
 }
 
-.container-products .card-products{
-    width: 330px;
-    height: 430px;
-    border-radius: 8px;
-    overflow: hidden;
-    margin: 20px;
-    text-align: center;
-    transition: all 0,25s;
+.carousel-control-prev, .carousel-control-next{
+    background-color: #e1e1e1;
+    width: 6vh;
+    height: 6vh;
+    border-radius: 50%;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
-.container-products .card-products:hover{
-    transform: translateY(-15px);
+.carousel-control-prev span, .carousel-control-next span{
+    width: 1.5rem;
+    height: 1.5rem;
 }
 
-.container-products .card-products img{
-    width: 330px;
-    height: 220px;
+
+
+@media (max-width: 567px){
+    .card:not(:first-child){
+        display: none;
+    }
+    .carousel-control-prev, .carousel-control-next{
+        width: 3vh;
+        height: 3vh;   
+    }
+   .card-title{
+    display: none;
+   } 
+   
+   .card-text{
+    display: none;
+   }
+
+   .img-card img {
+    height: 40vw;
+    width: 40vw;
+    }
+
+    .card-body{
+        display: flex;
+        justify-content: center;
+    }
+
+}
+
+@media (max-width: 768px){
+    .card:not(:first-child){
+        display: none;
+    }
+    .carousel-control-prev, .carousel-control-next{
+        width: 3vh;
+        height: 3vh;   
+    }
+   .card-title{
+    display: none;
+   } 
+   
+   .card-text{
+    display: none;
+   }
+
+   .img-card img {
+    height: 40vw;
+    width: 40vw;
+    }
+
+    .card-body{
+        display: flex;
+        justify-content: center;
+    }
 
 }
