--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,6 +40,15 @@ body{
     transform: scale(1.15);
 }
 
+@media (max-width: 425px){
+   
+    .carousel-item img{
+        height: 60vw;
+    }
+}
+
+
+
 .footer-text h5 {
     color: #f5f6fa;
     font-size: 20px;
