--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,13 @@
-h1 {
-  color: 221;
+
+html {
+  scroll-behavior: smooth;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Kanit", sans-serif;
 }
 
 /*# sourceMappingURL=styles.css.map */
