Terminado traspaso de css a scss, ajustes de sintaxis por el mismo

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,3 +3,8 @@
 @import "base/reset";
 @import "components/nav";
 @import "components/carousel";
+@import "components/footer";
+@import "components/media-queries";
+@import "components/form";
+@import "components/iframe";
+@import "components/cards";
