--- a/css/main.css
+++ b/css/main.css
@@ -32,4 +32,257 @@ html {
   height: 1.5rem;
 }
 
+.footer-text h5 {
+  color: #f5f6fa;
+  font-size: 20px;
+}
+
+@media (max-width: 567px) {
+  .card-margin-products:not(:first-child) {
+    display: none;
+  }
+  .carousel-control-prev, .carousel-control-next {
+    width: 3vh;
+    height: 3vh;
+  }
+  .card-title-products {
+    display: none;
+  }
+  .card-text-products {
+    display: none;
+  }
+  .img-card img {
+    height: 40vw;
+    width: 40vw;
+  }
+  .card-body-products {
+    display: flex;
+    justify-content: center;
+  }
+}
+@media (max-width: 768px) {
+  .card-margin-products:not(:first-child) {
+    display: none;
+  }
+  .carousel-control-prev, .carousel-control-next {
+    width: 3vh;
+    height: 3vh;
+  }
+  .card-title-products {
+    display: none;
+  }
+  .card-text-products {
+    display: none;
+  }
+  .img-card img {
+    height: 40vw;
+    width: 40vw;
+  }
+  .card-body-products {
+    display: flex;
+    justify-content: center;
+  }
+}
+@media (min-width: 768px) and (max-width: 1440px) {
+  .card-height-auriculares img {
+    height: 20vw;
+    width: 20vw;
+    align-items: center;
+  }
+  .card-body-auriculares h1 {
+    font-size: 20px;
+  }
+  .card-body-auriculares p {
+    font-size: 10px;
+  }
+  .btn-size-auriculares {
+    height: 2rem;
+    display: flex;
+    align-items: center;
+  }
+  .container-grid-lg {
+    display: grid;
+    grid-template-areas: "teclado1 teclado2" "teclado3 teclado4";
+  }
+  .container-grid-lg-auris {
+    display: grid;
+    grid-template-areas: "auriculares1 auriculares2" "auriculares3 auriculares4";
+  }
+  .card-height-auriculares {
+    height: 100%;
+    width: 100%;
+  }
+}
+@media (max-width: 768px) {
+  .card-hover:hover {
+    transform: none;
+  }
+  .card-hover {
+    transition: none;
+  }
+  .card-height-auriculares img {
+    height: 30vw;
+  }
+  .card-body-auriculares h1 {
+    font-size: 20px;
+  }
+  .card-body-auriculares p {
+    font-size: 10px;
+  }
+  .btn-size-auriculares {
+    height: 2rem;
+    display: flex;
+    align-items: center;
+  }
+}
+@media (max-width: 768px) {
+  .flex-form {
+    width: 100%;
+    height: 100%;
+  }
+  .hover-form {
+    width: 100%;
+    height: 100%;
+    transition: none;
+  }
+  .hover-form:hover {
+    transform: none;
+  }
+  .footer-contacto {
+    margin-top: auto;
+  }
+}
+@media (max-width: 425px) {
+  .carousel-item img {
+    height: 60vw;
+  }
+}
+.grid-lg-1 {
+  grid-area: teclado1;
+}
+
+.grid-lg-2 {
+  grid-area: teclado2;
+}
+
+.grid-lg-3 {
+  grid-area: teclado3;
+}
+
+.grid-lg-4 {
+  grid-area: teclado4;
+}
+
+.grid-lg-5 {
+  grid-area: auriculares1;
+}
+
+.grid-lg-6 {
+  grid-area: auriculares2;
+}
+
+.grid-lg-7 {
+  grid-area: auriculares3;
+}
+
+.grid-lg-8 {
+  grid-area: auriculares4;
+}
+
+.flex-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 10% 0;
+  background-color: #808e9b;
+  padding: 6rem;
+}
+
+.check-btn-flex {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+}
+
+.label-w {
+  width: 80%;
+}
+
+.hover-form {
+  width: 100%;
+  height: 20vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #e55039;
+  transition: 0.4s;
+  box-shadow: inset;
+}
+
+.hover-form:hover {
+  transform: scale(1.2);
+}
+
+.iframe-flex {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+}
+
+.card-hover {
+  transition: 0.3s;
+}
+
+.card-hover:hover {
+  transform: scale(1.15);
+}
+
+.card-products {
+  display: flex;
+}
+
+.card-margin-products {
+  margin: 0 0.5em;
+}
+
+.card-body-auriculares {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card-body-auriculares h1 {
+  font-size: 10px;
+}
+
+.card-body-auriculares p {
+  font-size: 10px;
+}
+
+.btn-size-auriculares {
+  height: 2rem;
+  display: flex;
+  align-items: center;
+}
+
+.card-img-top {
+  height: 30vh;
+  overflow: hidden;
+}
+
+.img-card img {
+  height: 15vw;
+  width: 20vw;
+}
+
+.img-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 /*# sourceMappingURL=main.css.map */
