--- a/scss/utilities/_var.scss
+++ b/scss/utilities/_var.scss
@@ -1,6 +1,6 @@
 // Colors
-$pricipal-color: #808e9b; 
-$secondary-color: #e55039;
+$pricipal-color: #dee2e6; 
+$secondary-color: #6c757d;
 $text-color: #f5f6fa;
 $carousel-control-color: #e1e1e1; 
 
