--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     margin: 10% 0;
-    background-color: #808e9b;
+    background-color: #bcb8b1;
     padding: 6rem;
 }
 
@@ -28,8 +28,8 @@
     background-color: #e55039;
     transition: 0.4s;
     box-shadow: inset;
+    &:hover{
+        transform: scale(1.20);
+    }
 }
 
-.hover-form:hover{
-    transform: scale(1.20);
-}
