--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -6,7 +6,7 @@
     li {
         a{
             font-size: 15px;
-            color: #f5f6fa;
+            color: $text-color;
         }
     }
 }
