--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -1,8 +1,6 @@
 .flex-form{
-    display: flex;
+    @include flex-center;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     margin: 10% 0;
     background-color: #bcb8b1;
     padding: 6rem;
@@ -19,12 +17,10 @@
 }
 
 .hover-form{
+    @include flex-center;
     width: 100%;
     height: 20vw;
-    display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     background-color: #e55039;
     transition: 0.4s;
     box-shadow: inset;
