--- a/scss/utilities/_var.scss
+++ b/scss/utilities/_var.scss
@@ -3,9 +3,15 @@ $pricipal-color: #dee2e6;
 $secondary-color: #6c757d;
 $text-color: #f5f6fa;
 $carousel-control-color: #e1e1e1; 
+$first-card-home: #184e77;
+$second-card-home: #1e6091;
+$third-card-home: #168aad;
 
 // Height 
 $card-img-height: 15vw;
 
 // Width
 $card-img-width: 20vw;
+
+// Font-size
+$card-aside: 4em;
