--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,6 @@ html {
 }
 
 #navbar li a {
-  font-size: 15px;
   color: #f5f6fa;
 }
 
@@ -44,6 +43,11 @@ html {
 
 .card-margin-products {
   margin: 0.5em;
+}
+
+.card-product-height {
+  height: 25em;
+  width: 25em;
 }
 
 .card-body-auriculares {
@@ -78,6 +82,34 @@ html {
   justify-content: center;
   flex-direction: column;
 }
+.card-aside h1 {
+  font-size: 4em;
+  text-align: start;
+}
+.card-aside h2 {
+  font-size: 4em;
+  text-align: end;
+}
+.card-aside h3 {
+  font-size: 4em;
+  text-align: start;
+}
+.card-aside p {
+  font-size: 2em;
+  font-weight: lighter;
+}
+
+.card-color-1 {
+  background-color: #184e77;
+}
+
+.card-color-2 {
+  background-color: #1e6091;
+}
+
+.card-color-3 {
+  background-color: #168aad;
+}
 
 .card-body {
   display: flex;
@@ -86,7 +118,7 @@ html {
   flex-direction: column;
 }
 .card-body a {
-  font-size: 16px;
+  font-size: 1em;
 }
 
 .btn-home-card {
@@ -95,11 +127,6 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.card-flex-end {
-  display: flex;
-  align-self: start;
 }
 
 .card-img-top {
@@ -180,16 +207,27 @@ html {
   .card-text-products {
     display: none;
   }
-  .img-card img {
-    height: 40vw;
-    width: 40vw;
+  .card-product-height {
+    height: 10em;
+    width: 10em;
+  }
+  .card-height-auriculares img {
+    object-fit: contain;
+  }
+  .container-grid-lg {
+    display: grid;
+    grid-template-areas: "teclado1 teclado2" "teclado3 teclado4";
+  }
+  .container-grid-lg-auris {
+    display: grid;
+    grid-template-areas: "auriculares1 auriculares2" "auriculares3 auriculares4";
   }
   .card-body-products {
     display: flex;
     justify-content: center;
   }
 }
-@media (min-width: 768px) and (max-width: 1440px) {
+@media (max-width: 991px) {
   .card-height-auriculares img {
     height: 20vw;
     width: 20vw;
