--- a/scss/utilities/_var.scss
+++ b/scss/utilities/_var.scss
@@ -3,9 +3,9 @@ $pricipal-color: #dee2e6;
 $secondary-color: #6c757d;
 $text-color: #f5f6fa;
 $carousel-control-color: #e1e1e1; 
-$first-card-home: #184e77;
-$second-card-home: #1e6091;
-$third-card-home: #168aad;
+$card-home: #252323;
+$btn-home: linear-gradient(180deg, rgba(37,35,35,1) 0%, rgba(37,35,35,1) 82%, rgba(3,139,167,1) 100%);
+
 
 // Height 
 $card-img-height: 15vw;
@@ -16,3 +16,5 @@ $card-img-width: 20vw;
 // Font-size
 $card-aside: 4em;
 $card-title: 23px;
+$card-aside-mobile: 2em;
+
