Reajustes funcionalidades responsive, diseño general y comienzo de diseño en Contacto

--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -90,8 +90,7 @@
     height: 4em;
     width: 15em;
     @include flex-center;
-    background: $btn-home;
-    color: $text-color;
+    @include btn;
     border-color: $text-color;
 }
 
