--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,11 @@ html {
   scroll-behavior: smooth;
 }
 
+.btn-style {
+  background: linear-gradient(180deg, rgb(37, 35, 35) 0%, rgb(37, 35, 35) 82%, rgb(3, 139, 167) 100%);
+  color: #f5f6fa;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -15,6 +20,10 @@ html {
 
 #navbar li a {
   color: #f5f6fa;
+}
+
+.bg-nav {
+  background-color: #252323;
 }
 
 .carousel-control-prev, .carousel-control-next {
@@ -187,7 +196,8 @@ html {
   width: 100%;
   height: 20vw;
   flex-direction: column;
-  background-color: #e55039;
+  background-color: #252323;
+  color: #f5f6fa;
   transition: 0.4s;
   box-shadow: inset;
 }
@@ -206,6 +216,10 @@ html {
 .footer-text h5 {
   color: #f5f6fa;
   font-size: 20px;
+}
+
+.bg-footer {
+  background-color: #252323;
 }
 
 @media (max-width: 567px) {
@@ -289,17 +303,17 @@ html {
   }
   .card-position {
     position: relative;
-    top: 130px;
+    top: 170px;
   }
   .text-home-relative {
     position: relative;
-    bottom: 320px;
+    bottom: 300px;
   }
   .carousel-item img {
     height: 320px;
   }
 }
-@media (max-width: 991px) {
+@media (min-width: 568px) and (max-width: 991px) {
   .card-height-auriculares img {
     height: 20vw;
     width: 20vw;
@@ -373,7 +387,7 @@ html {
   }
   .text-home-relative {
     position: relative;
-    bottom: 530px;
+    bottom: 520px;
   }
   .carousel-item img {
     height: 320px;
