--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -16,12 +16,15 @@
     width: 80%;  
 }
 
+
+
 .hover-form{
     @include flex-center;
     width: 100%;
     height: 20vw;
     flex-direction: column;
-    background-color: #e55039;
+    background-color: $card-home;
+    color: $text-color;
     transition: 0.4s;
     box-shadow: inset;
     &:hover{
