--- a/scss/utilities/_var.scss
+++ b/scss/utilities/_var.scss
@@ -5,7 +5,8 @@ $text-color: #f5f6fa;
 $carousel-control-color: #e1e1e1; 
 $card-home: #252323;
 $btn-home: linear-gradient(180deg, rgba(37,35,35,1) 0%, rgba(37,35,35,1) 82%, rgba(3,139,167,1) 100%);
-
+$bg-form: linear-gradient(180deg, rgba(37,35,35,1) 0%, rgba(37,35,35,1) 60%, rgba(3,139,167,1) 100%);
+$btn:#038ba7;
 
 // Height 
 $card-img-height: 15vw;
