--- a/css/main.css
+++ b/css/main.css
@@ -214,10 +214,10 @@ html {
   background-color: #262424;
 }
 
-main h1 {
+.main-form h1 {
   color: #f5f6fa;
 }
-main p {
+.main-form p {
   color: #f5f6fa;
 }
 
@@ -226,11 +226,15 @@ main p {
   align-items: center;
   flex-direction: column;
   margin-top: 7%;
-  background-color: white;
 }
 
 .iframe-title {
   color: #f5f6fa;
+}
+
+iframe {
+  height: 30rem;
+  width: 35%;
 }
 
 .footer-text h5 {
@@ -242,10 +246,6 @@ main p {
   background-color: #252323;
 }
 
-.bg-footer-form {
-  background-color: #038ba7;
-}
-
 @media (max-width: 567px) {
   .card-margin-products:not(:first-child) {
     display: none;
@@ -254,17 +254,22 @@ main p {
     width: 3vh;
     height: 3vh;
   }
-  .card-title-products {
-    display: none;
-  }
   .card-text-products {
     display: none;
+  }
+  .img-card {
+    height: 25vh;
+  }
+  .img-card .carousel-img-mobile {
+    height: 10rem;
+    width: 50%;
+    object-fit: fill;
   }
   .card-product-height {
     height: 70%;
     width: 100%;
   }
-  .card-img-top {
+  .card-img-mobile {
     overflow: hidden;
     height: 100%;
   }
@@ -335,22 +340,19 @@ main p {
   }
   .card-position {
     position: relative;
-    top: 170px;
+    top: 130px;
   }
   .text-home-relative {
     position: relative;
-    bottom: 300px;
+    bottom: 330px;
   }
-  .carousel-item img {
-    height: 300px;
+  .carousel-item .img-carousel {
+    height: 250px;
   }
-  .hover-form {
-    width: 20em;
-    height: 100%;
-    transition: none;
-  }
-  .hover-form:hover {
-    transform: none;
+  iframe {
+    margin-top: 25px;
+    height: 25rem;
+    width: 90%;
   }
 }
 @media (min-width: 769px) and (max-width: 991px) {
@@ -498,6 +500,11 @@ main p {
   }
   .hover-form:hover {
     transform: none;
+  }
+  iframe {
+    margin-top: 25px;
+    height: 25rem;
+    width: 70%;
   }
 }
 .grid-lg-1 {
