--- a/scss/components/_iframe.scss
+++ b/scss/components/_iframe.scss
@@ -3,9 +3,13 @@
     align-items: center;
     flex-direction: column;
     margin-top: 7%;
-    background-color: white ;
  }
 
  .iframe-title{
     color: $text-color;
+ }
+
+ iframe{
+   height: 30rem;
+   width: 35%;
  }
