--- a/scss/components/_media-queries.scss
+++ b/scss/components/_media-queries.scss
@@ -126,6 +126,15 @@
         }
     }
 
+    //Form
+    .hover-form{
+        width: 20em;
+        height: 100%;
+        transition: none;
+        &:hover{
+            transform: none;
+        }
+    }
     //Iframe
     iframe{
         margin-top: 25px;
